--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "core-js": "^3.33.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lightweight-confetti": "^0.1.13"
